--- a/workflows/edit_eml/edit_attributelists.Rmd
+++ b/workflows/edit_eml/edit_attributelists.Rmd
@@ -74,9 +74,9 @@ attributes <- data.frame(
     missingValueCodeExplanation = c(NA, NA, NA,NA, NA, NA, NA, 'no sampling comments'))
 ```
 
-However, typing this out in R can be a major pain. Luckily, there's an app that you can use to build attribute information. You can use the app to build attributes from a data file loaded into R (recommended as the app will auto-fill some fields for you) to edit an existing attribute table, or to create attributes from scratch. 
+However, typing this out in R can be a major pain. Luckily, there's a Shiny app that you can use to build attribute information. You can use the app to build attributes from a data file loaded into R (recommended as the app will auto-fill some fields for you) to edit an existing attribute table, or to create attributes from scratch. Use the following commands to create or modify attributes. 
 
-Use the following commands to create or modify attributes. These commands will launch a "Shiny" app in your web browser. You must select "Quit App" in order to save your changes, and R will not run code while the app is open.
+Use the following commands to create or modify attributes. These commands will launch a "Shiny" app in your web browser.
 
 ```{r, eval = FALSE}
 #first download the CSV in your data package from Exercise #2
@@ -96,7 +96,11 @@ attribute_tables <- get_attributes(doc$dataset$dataTable[[i]]$attributeList)
 attribute_tables <- EML::shiny_attributes(attributes = attribute_tables$attributes)
 ```
 
-Once you are done editing a table in the app, quit the app and the tables will be assigned to the `attribute_tables` variable as a list of data frames (one for attributes, factors, and units). Be careful to not overwrite your completed `attribute_tables` object when trying to make edits. The last line of code can be used in order to make edits to an existing `attribute_tables` object.
+Once you are done editing a table in the browser app, quit the app by pressing the red "Quit App" button in the top right corner of the page. 
+
+If you close the Shiny app tab in your browser instead of using the "Quit App" button, your work will not be saved, R will think that the Shiny app is still open, and you will not be able to run other code. You can tell if R is confused if you have closed the Shiny app and the bottom line in the console still says `Listening on http://...`. If this happens, press the red stop sign button on the right hand side of the console window in order to interrupt R.
+
+The tables you constructed in the app will be assigned to the `attribute_tables` variable as a list of data frames (one for attributes, factors, and units). Be careful to not overwrite your completed `attribute_tables` object when trying to make edits. The last line of code can be used in order to make edits to an existing `attribute_tables` object.
 
 Alternatively, each table can be to exported to a csv file by clicking the `Download` button. If you downloaded the table, read the table back into your R session and assign it to a variable in your script (e.g. `attributes <- data.frame(...)`), or just use the variable that `shiny_attributes` returned.
 
