--- a/training/index.Rmd
+++ b/training/index.Rmd
@@ -1,6 +1,6 @@
 --- 
 title: "NCEAS Data Team Training"
-author: "Jesse Goldstein, Dominic Mullen, Jeanette Clark, Irene Steves, Mitchell Maier, Bryce Mecum, Peter Slaughter, Emily O'Dean, Jasmine Lai, Daphne Virlar-Knight"
+author: "Jesse Goldstein, Dominic Mullen, Jeanette Clark, Irene Steves, Mitchell Maier, Bryce Mecum, Peter Slaughter, Emily O'Dean, Jasmine Lai, Daphne Virlar-Knight, Maggie Klope"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 output: 
@@ -33,15 +33,15 @@ favicon: "favicon.ico"
     + Login to <a href="https://test.arcticdata.io" target="_blank">test.arcticdata.io</a> with your ORCID iD
 * <a href="http://nceas.slack.com" target="_blank">NCEAS Slack</a> - get an invite from <a href="http://slack.nceas.ucsb.edu" target="_blank">slack.nceas.ucsb.edu</a>
     + Channels to join: #arctica, #arcticbot, #computing, #datateam, #devteam, #social
-    + Introduce yourself in #datateam and then use that channel to ask Jeanette to make you an administrator on test.arcticdata.io
-* Arctic Data Center Team - after creation of ORCiD and sign-in to both arcticdata.io and test.arcticdata.io, request addition to the admin group from Jeanette in Slack
+    + Introduce yourself in #datateam and then use that channel to ask Justin or Maggie to make you an administrator on test.arcticdata.io
+* Arctic Data Center Team - after creation of ORCiD and sign-in to both arcticdata.io and test.arcticdata.io, request addition to the admin group from Justin or Maggie in Slack
 * GitHub - if you do not have a public GitHub account already, please register for one <a href="https://github.com/join?source=header-home" target="_blank">here</a>
 * If you are an intern, fill out anticipated quarterly schedule on the intern google calendar shared with you. 
 * <a href="https://timekeeping.ucsb.edu/" target="_blank">Electronic Timekeeping</a> - make sure you can log on to electronic timekeeping
 via your UCSBNetID and password (may not be accessible on the first day, if you continue to have issues please let Ana know). If you are an hourly employee, log your hours for your first day! Under today's date select 'Hours Worked' under the Pay Code column, enter the amount of hours under the Amount column, and finally click the 'Save' button in the top right. At the end of every two-week pay period you will also need to click the 'Approve Timecard' button in order to submit your timecard.  
 * <a href="https://www.ucpath.ucsb.edu/" target="_blank">UCPath</a> - you can set up your paycheck preferences here, including direct deposit and income tax withholding. 
 <a href="https://timekeeping.ucsb.edu/sites/default/files/employee_hours_worked_0.pdf" target="_blank">Detailed Instructions</a>
-* Let Jeanette or Daphne know what email you would like to use for general NCEAS updates from all@nceas.ucsb.edu
+* Let Justin or Maggie know what email you would like to use for general NCEAS updates from all@nceas.ucsb.edu
 
 ## NCEAS events {-}
 
