Updated NCEAS Code of Conduct link

--- a/training/index.Rmd
+++ b/training/index.Rmd
@@ -72,7 +72,7 @@ Additionally, we expect interns to work within the standard business hours of 8a
 
 ## Code of Conduct {.unnumbered}
 
-Take a moment to review the [diversity and inclusion page](https://www.nceas.ucsb.edu/diversity-inclusion) and [code of conduct](https://live-ncea-ucsb-edu-v01.pantheonsite.io/sites/default/files/2020-02/NCEAS_Code-of-Conduct_2019.pdf) at NCEAS so that we can foster an environment that is safe, welcoming and inclusive for everyone.
+Take a moment to review the [diversity and inclusion page](https://www.nceas.ucsb.edu/diversity-inclusion) and [code of conduct](https://www.nceas.ucsb.edu/sites/default/files/2021-11/NCEAS_Code-of-Conduct_Nov2021_0.pdf) at NCEAS so that we can foster an environment that is safe, welcoming and inclusive for everyone.
 
 ## Citation Information {.unnumbered}
 
